samples/_failures_safe/1761217314_0c47c6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_46663668.c: In function ‘main’:
./samples/SAFE/__tmp_46663668.c:163:5: error: expected expression at end of input
  163 |     if (len > 0 &&
      |     ^~
./samples/SAFE/__tmp_46663668.c:163:5: error: expected declaration or statement at end of input
